testdata/baselines/reference/submodule/conformance/awaitUnion_es6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
awaitUnion_es6.ts(2,16): error TS2304: Cannot find name 'PromiseLike'.
awaitUnion_es6.ts(2,38): error TS2304: Cannot find name 'PromiseLike'.
awaitUnion_es6.ts(3,16): error TS2304: Cannot find name 'PromiseLike'.
awaitUnion_es6.ts(4,25): error TS2304: Cannot find name 'PromiseLike'.
awaitUnion_es6.ts(5,25): error TS2304: Cannot find name 'PromiseLike'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== awaitUnion_es6.ts (5 errors) ====
    declare let a: number | string;
    declare let b: PromiseLike<number> | PromiseLike<string>;
                   ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
                                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
    declare let c: PromiseLike<number | string>;
                   ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
    declare let d: number | PromiseLike<string>;
                            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
    declare let e: number | PromiseLike<number | string>;
                            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
    async function f() {
    	let await_a = await a;
    	let await_b = await b;
    	let await_c = await c;
    	let await_d = await d;
    	let await_e = await e;
    }